[tool.poetry]
name = "twitter-scripts"
version = "0.1.0"
description = ""
authors = ["Will Koury <wkoury@hey.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
